--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.2.1",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
+    "react-router-dom": "^4.1.1",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   },
